src/log/build_2025-04-18_12-36-39/turtlebot3_rl/stdout_stderr.log
running egg_info
creating ../build/turtlebot3_rl/turtlebot3_rl.egg-info
writing ../build/turtlebot3_rl/turtlebot3_rl.egg-info/PKG-INFO
writing dependency_links to ../build/turtlebot3_rl/turtlebot3_rl.egg-info/dependency_links.txt
writing entry points to ../build/turtlebot3_rl/turtlebot3_rl.egg-info/entry_points.txt
writing requirements to ../build/turtlebot3_rl/turtlebot3_rl.egg-info/requires.txt
writing top-level names to ../build/turtlebot3_rl/turtlebot3_rl.egg-info/top_level.txt
writing manifest file '../build/turtlebot3_rl/turtlebot3_rl.egg-info/SOURCES.txt'
reading manifest file '../build/turtlebot3_rl/turtlebot3_rl.egg-info/SOURCES.txt'
writing manifest file '../build/turtlebot3_rl/turtlebot3_rl.egg-info/SOURCES.txt'
running build
running build_py
creating /home/emma/turtlebot3_rl_ws/src/build/turtlebot3_rl/build
creating /home/emma/turtlebot3_rl_ws/src/build/turtlebot3_rl/build/lib
creating /home/emma/turtlebot3_rl_ws/src/build/turtlebot3_rl/build/lib/turtlebot3_rl
copying turtlebot3_rl/turtlebot3_env_test.py -> /home/emma/turtlebot3_rl_ws/src/build/turtlebot3_rl/build/lib/turtlebot3_rl
copying turtlebot3_rl/train_test.py -> /home/emma/turtlebot3_rl_ws/src/build/turtlebot3_rl/build/lib/turtlebot3_rl
copying turtlebot3_rl/turtlebot3_env.py -> /home/emma/turtlebot3_rl_ws/src/build/turtlebot3_rl/build/lib/turtlebot3_rl
copying turtlebot3_rl/train.py -> /home/emma/turtlebot3_rl_ws/src/build/turtlebot3_rl/build/lib/turtlebot3_rl
copying turtlebot3_rl/__init__.py -> /home/emma/turtlebot3_rl_ws/src/build/turtlebot3_rl/build/lib/turtlebot3_rl
running install
running install_lib
creating /home/emma/turtlebot3_rl_ws/src/install/turtlebot3_rl/lib/python3.10/site-packages/turtlebot3_rl
copying /home/emma/turtlebot3_rl_ws/src/build/turtlebot3_rl/build/lib/turtlebot3_rl/turtlebot3_env_test.py -> /home/emma/turtlebot3_rl_ws/src/install/turtlebot3_rl/lib/python3.10/site-packages/turtlebot3_rl
copying /home/emma/turtlebot3_rl_ws/src/build/turtlebot3_rl/build/lib/turtlebot3_rl/train_test.py -> /home/emma/turtlebot3_rl_ws/src/install/turtlebot3_rl/lib/python3.10/site-packages/turtlebot3_rl
copying /home/emma/turtlebot3_rl_ws/src/build/turtlebot3_rl/build/lib/turtlebot3_rl/turtlebot3_env.py -> /home/emma/turtlebot3_rl_ws/src/install/turtlebot3_rl/lib/python3.10/site-packages/turtlebot3_rl
copying /home/emma/turtlebot3_rl_ws/src/build/turtlebot3_rl/build/lib/turtlebot3_rl/train.py -> /home/emma/turtlebot3_rl_ws/src/install/turtlebot3_rl/lib/python3.10/site-packages/turtlebot3_rl
copying /home/emma/turtlebot3_rl_ws/src/build/turtlebot3_rl/build/lib/turtlebot3_rl/__init__.py -> /home/emma/turtlebot3_rl_ws/src/install/turtlebot3_rl/lib/python3.10/site-packages/turtlebot3_rl
byte-compiling /home/emma/turtlebot3_rl_ws/src/install/turtlebot3_rl/lib/python3.10/site-packages/turtlebot3_rl/turtlebot3_env_test.py to turtlebot3_env_test.cpython-310.pyc
byte-compiling /home/emma/turtlebot3_rl_ws/src/install/turtlebot3_rl/lib/python3.10/site-packages/turtlebot3_rl/train_test.py to train_test.cpython-310.pyc
byte-compiling /home/emma/turtlebot3_rl_ws/src/install/turtlebot3_rl/lib/python3.10/site-packages/turtlebot3_rl/turtlebot3_env.py to turtlebot3_env.cpython-310.pyc
byte-compiling /home/emma/turtlebot3_rl_ws/src/install/turtlebot3_rl/lib/python3.10/site-packages/turtlebot3_rl/train.py to train.cpython-310.pyc
byte-compiling /home/emma/turtlebot3_rl_ws/src/install/turtlebot3_rl/lib/python3.10/site-packages/turtlebot3_rl/__init__.py to __init__.cpython-310.pyc
running install_data
creating /home/emma/turtlebot3_rl_ws/src/install/turtlebot3_rl/share/ament_index
creating /home/emma/turtlebot3_rl_ws/src/install/turtlebot3_rl/share/ament_index/resource_index
creating /home/emma/turtlebot3_rl_ws/src/install/turtlebot3_rl/share/ament_index/resource_index/packages
copying resource/turtlebot3_rl -> /home/emma/turtlebot3_rl_ws/src/install/turtlebot3_rl/share/ament_index/resource_index/packages
copying package.xml -> /home/emma/turtlebot3_rl_ws/src/install/turtlebot3_rl/share/turtlebot3_rl
running install_egg_info
Copying ../build/turtlebot3_rl/turtlebot3_rl.egg-info to /home/emma/turtlebot3_rl_ws/src/install/turtlebot3_rl/lib/python3.10/site-packages/turtlebot3_rl-0.0.0-py3.10.egg-info
running install_scripts
  File "/home/emma/turtlebot3_rl_ws/src/install/turtlebot3_rl/lib/python3.10/site-packages/turtlebot3_rl/train_test.py", line 16
    model.save(f"model_{datetime.now().strftime("%Y-%m-%d %H:%M:%S")}")
                                                 ^
SyntaxError: f-string: unmatched '('

writing list of installed files to '/home/emma/turtlebot3_rl_ws/src/build/turtlebot3_rl/install.log'
